# DataPacketSolver

./: CMakeLists.txt  README.md  test.cpp
c/: DataPacketSolver.c  DataPacketSolver.h
cpp/: DataPacketSolver.h
